# kaggle-spaceship-titanic

./: .gitignore  README.md  pyproject.toml
kaggle_space_titanic/: charts.py  feature_importance.py  main.py  ml_utils.py
kaggle_space_titanic/charts_raw_data/: test.html  train+test.html  train.html
kaggle_space_titanic/charts_raw_data/Transported/: cat_var_plots.html  distplots_cats.html  distplots_nums.html  heatmaps.html  kde_plots.html  scatterplots.html  violinplots.html
kaggle_space_titanic/input_cache/: train+test.csv
kaggle_space_titanic/versions/: space_titanic_0.79845.py  space_titanic_0.80266.py  space_titanic_0.80360.py  space_titanic_0.80664.py  space_titanic_0.80897.py  space_titanic_0.80991.py  space_titanic_0.81201_drop.py  space_titanic_0.81365.py  space_titanic_0.81529.py
