[tool.poetry]
name = "kaggle-space-titanic"
version = "0.1.0"
description = ""
authors = ["Piotr Włodarek <contact@qertoip.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
scikit-learn = "^1.1.1"
requests = "^2.28.1"
matplotlib = "^3.5.3"
pandas = "^1.4.3"
seaborn = "^0.11.2"
xgboost = "^1.6.2"
catboost = "^1.1"
lightgbm = "^3.3.2"
autoviz = "^0.1.58"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
